--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,12 +7,17 @@ requires-python = ">=3.9"
 dependencies = [
     "librosa>=0.11.0",
     "matplotlib>=3.9.4",
-    "numpy>=2.0.2",
+    "numpy>=1.0.0",
     "pesq>=0.0.4",
     "prettytable>=3.16.0",
     "pysepm-evo>=0.1.1",
     "pystoi>=0.4.1",
     "pyyaml>=6.0.2",
     "sounddevice>=0.5.2",
-    "srmrpy",
+    "pesq @ https://github.com/ludlows/python-pesq/archive/master.zip",
+    "srmrpy @ https://github.com/jfsantos/SRMRpy/archive/master.zip",
 ]
+
+[build-system]
+requires = ["setuptools>=61.0"]
+build-backend = "setuptools.build_meta"
