--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,6 +16,7 @@ dependencies = [
     "sounddevice>=0.5.2",
     "pesq @ https://github.com/ludlows/python-pesq/archive/master.zip",
     "srmrpy @ https://github.com/jfsantos/SRMRpy/archive/master.zip",
+    "tqdm>=4.67.1",
 ]
 
 [build-system]
