--- a/pyproject.toml
+++ b/pyproject.toml
@@ -22,3 +22,7 @@ dependencies = [
 [build-system]
 requires = ["setuptools>=61.0"]
 build-backend = "setuptools.build_meta"
+
+[tool.setuptools.packages.find]
+where = ["."]
+include = ["cmvdr*"]
