--- a/configs/cmvdr.yaml
+++ b/configs/cmvdr.yaml
@@ -163,6 +163,7 @@ demo:
     noise|snr_db_dir: [ -20, -10, 0 ]
     noise|harmonic_correlation: [ 0.0, 0.3, 0.5, 0.8 ]
   cov_estimation:
+    recursive_average: 0  # if true, use recursive averaging for the covariance matrices
     cov_est_forgetting_factor: 0.005
   cyclic:
     P_max: 5
