evaluation can be run from CLI

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -59,3 +59,4 @@ include = ["cmvdr*"]
 
 [project.scripts]
 cmvdr = "cmvdr.cli.cmvdr_inference_cli:main"
+cmvdr-eval = "cmvdr.cli.evaluate_cli:main"
